--- a/style.css
+++ b/style.css
@@ -4,21 +4,34 @@
     box-sizing: border-box;
 }
 
+/* 
+padding: 0;
+  margin: 0; 
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(0, 0, 0, .9) */
+
+
 body {
     font-size: 1.3rem;
-    font-family: 'Oswald', sans-serif;
-    background: #000;
+    font-family: 'Oswald', sans-serif; 
+    background: black;
 }
-  
+
+
 .logo{
-    width: 70%;
-    height: 100%;
-    margin-left: 15vw;
-    margin-bottom: 8vw;
+    width: 5%;
+    height: 10%;
+    margin-left: 4vw;
+    margin-top: 2vw;
+    margin-bottom: 5vw;
 }
 
 .logo img{
-    height: 15vw;
+    height: 5vw;
 }
 
 
@@ -46,9 +59,9 @@ body {
     line-height: 1.2;
   }
   
-  .main-header h1 span {
+  /* .main-header h1 span {
     color: #b50d10;
-  }
+  } */
   
   .main-header p {
     font-size: 2rem;
@@ -63,7 +76,7 @@ body {
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 2rem;
     color: white;
-    background: #000;
+    /* background: #000; */
     margin-bottom: 2rem;
   }
   
